Fix - page layout cutoff issue11

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -208,7 +208,7 @@
 
 
 @media (max-width: 1000px) {
-  .dashboard-lgeo  {
+  .dashboard-pg2-lgeo  {
     width: 1000px;
     display: inline-block;
     padding-left: 2%;
@@ -222,7 +222,30 @@
 
 
 @media (min-width: 1000px) {
-  .dashboard-lgeo  {
+  .dashboard-pg2-lgeo  {
+    width: 1100px;
+    display: inline-block;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .dashboard-pg3-lgeo  {
+    width: 1000px;
+    display: inline-block;
+    padding-left: 2%;
+    padding-right: 2%;
+    /* transform:scale(0.28); */
+    /* transform-origin: left top; */
+    /* margin-bottom:-2000px;
+    margin-right:-100px; */
+  }
+}
+
+
+@media (min-width: 1000px) {
+  .dashboard-pg3-lgeo  {
     width: 1100px;
     display: inline-block;
     padding-left: 2%;
